--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "rust-base-repo"
+name = "rufi-core"
 version = "0.1.0"
 edition = "2021"
+readme = "README.md"
+license = "Apache-2.0"
+description = "The core library for the RuFi framework"
+homepage = "https://github.com/lm98/rufi-core"
+documentation = "https://github.com/lm98/rufi-core"
+repository = "https://github.com/lm98/rufi-core"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.190", features = ["derive"] }
+serde_json = "1.0.107"
+rand = "0.8.4"
